--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .build
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+
+.direnv
